src/ifcc-test-output/testfiles_declarations-6_undeclared-var/gcc-compile.txt
input.c: In function ‘main’:
input.c:2:5: error: ‘a’ undeclared (first use in this function)
    2 |     a = 10;
      |     ^
input.c:2:5: note: each undeclared identifier is reported only once for each function it appears in

exit status: 1
